--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@vuepress/bundler-webpack": "^2.0.0-beta.33",
+    "@vuepress/plugin-search": "^2.0.0-beta.45",
     "vuepress": "^2.0.0-beta.36"
   }
 }
