--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "idm核心框架文档",
   "main": "index.js",
   "scripts": {
+    "dev": "npm run docs:dev",
+    "build": "npm run docs:build",
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
     "test": "echo \"Error: no test specified\" && exit 1"
